@@ -7,6 +7,11 @@
      don't kill the login shells if the shells stdin/out/err is closed.
      this should now work:
      ssh -2n localhost 'exec > /dev/null 2>&1; sleep 10; exit 5'; echo ?
+   - markus@cvs.openbsd.org 2001/10/11 13:45:21
+     [session.c]
+     delay detach of session if a channel gets closed but the child is 
+     still alive.  however, release pty, since the fd's to the child are 
+     already closed.
 
 20011010
  - (djm) OpenBSD CVS Sync
@@ -6705,4 +6710,4 @@
  - Wrote replacements for strlcpy and mkdtemp
  - Released 1.0pre1
 
-$Id: ChangeLog,v 1.1601 2001/10/12 01:35:04 djm Exp $
+$Id: ChangeLog,v 1.1602 2001/10/12 01:35:50 djm Exp $
